packages/docsearch-css/src/modal.css
/* ... */
.DocSearch-Clear {
  appearance: none;
  background: none;
  border: 0;
  color: var(--docsearch-highlight-color);
  cursor: pointer;
  flex: none;
  font: inherit;
  font-size: 0.9em;
  font-weight: 300;
  height: 28px;
  margin-inline-start: var(--docsearch-spacing);
  outline: none;
  overflow: hidden;
  padding: 0;
  user-select: none;
  white-space: nowrap;
}

.DocSearch-Close:focus-visible,
.DocSearch-Clear:focus-visible {
  outline: 2px solid var(--docsearch-focus-color);
  outline-offset: 1px;
  border-radius: 4px;
}

/* Modal Dropdown */

.DocSearch-Dropdown {
  height: var(--docsearch-modal-variable-height);
  max-height: calc(
    var(--docsearch-modal-height) - var(--docsearch-spacing) -
      var(--docsearch-footer-height)
  );
  min-height: var(--docsearch-spacing);
  overflow-y: auto; /* firefox */
  overflow-y: overlay;
  padding: 0 var(--docsearch-spacing);
  scrollbar-color: var(--docsearch-muted-color)
    var(--docsearch-modal-background);
  scrollbar-width: thin;
}

.DocSearch-Dropdown::-webkit-scrollbar {
  width: 12px;
}

.DocSearch-Dropdown::-webkit-scrollbar-track {
  background: transparent;
}

.DocSearch-Dropdown::-webkit-scrollbar-thumb {
  background-color: var(--docsearch-muted-color);
  border: 3px solid var(--docsearch-modal-background);
  border-radius: 20px;
}

.DocSearch-Dropdown-Container ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.DocSearch-Label {
  color: var(--docsearch-secondary-text-color);
  font-size: 0.875em;
  line-height: 1.6em;
  font-weight: 400;
}

.DocSearch-NoResults-Help {
  color: var(--docsearch-secondary-text-color);
  font-size: 0.8em;
  margin: 0;
  user-select: none;
  line-height: 1.5em;
  font-weight: 300;
}

.DocSearch-Help {
  color: var(--docsearch-secondary-text-color);
  font-size: 0.8em;
  margin: 0;
  user-select: none;
  line-height: 1.5em;
  font-weight: 300;
}

.DocSearch-Title {
  color: var(--docsearch-text-color);
  vertical-align: middle;
  font-size: 1.1em;
  line-height: 0.5em;
  font-weight: 300;
}

.DocSearch-Title strong {
  font-weight: 500;
}

.DocSearch-Logo a {
  display: flex;
}

.DocSearch-Logo svg {
  color: var(--docsearch-logo-color);
  margin-inline-start: 8px;
}

/* Hit */

.DocSearch-Hits:last-of-type {
  margin-block-end: 24px;
}

.DocSearch-Hits mark {
  background: none;
  color: var(--docsearch-highlight-color);
}

.DocSearch-HitsFooter {
  color: var(--docsearch-muted-color);
  display: flex;
  font-size: 0.85em;
  justify-content: center;
  margin-block-end: var(--docsearch-spacing);
  padding: var(--docsearch-spacing);
}

.DocSearch-HitsFooter a {
  border-block-end: 1px solid;
  color: inherit;
}

.DocSearch-Hit {
  border-radius: 4px;
  display: flex;
  padding-block-end: 4px;
  position: relative;
  scroll-margin-block-start: 40px;
}

.DocSearch-Hit:first-of-type {
  margin-block-start: 4px;
}

.DocSearch-Hit a,
.DocSearch-Hit--AskAI {
  background: var(--docsearch-hit-background);
  border-radius: 4px;
  display: block;
  padding-inline-start: var(--docsearch-spacing);
  width: 100%;
  cursor: pointer;
}

.DocSearch-Hit-source {
  background: var(--docsearch-modal-background);
  color: var(--docsearch-text-color);
  font-size: 0.9em;
  font-weight: 600;
  line-height: 32px;
  margin: 0 -4px;
  padding: 8px 4px 4px;
  position: sticky;
  inset-block-start: 0;
  z-index: 10;
}

.DocSearch-Hit-Tree {
  color: var(--docsearch-muted-color);
  height: var(--docsearch-hit-height);
  opacity: 0.5;
  stroke-width: var(--docsearch-icon-stroke-width);
  width: 24px;
}

.DocSearch-Hit[aria-selected='true'] a,
.DocSearch-Hit[aria-selected='true'] .DocSearch-Hit--AskAI {
  background-color: var(--docsearch-hit-highlight-color);
}

.DocSearch-Conversation-History .DocSearch-Hit[aria-selected='true'] a {
  background-color: var(--docsearch-hit-background);
}

.DocSearch-Hit mark {
  color: var(--docsearch-highlight-color);
  text-decoration: underline;
  text-underline-offset: 0.3em;
}

.DocSearch-Hit-Container {
  align-items: center;
  color: var(--docsearch-text-color);
  display: flex;
  flex-direction: row;
  height: var(--docsearch-hit-height);
  padding: 0 var(--docsearch-spacing) 0 0;
}

.DocSearch-Hit-icon {
  color: var(--docsearch-secondary-text-color);
  height: 20px;
  stroke-width: var(--docsearch-icon-stroke-width);
  width: 20px;
}

.DocSearch-Hit-action {
  align-items: center;
  color: var(--docsearch-muted-color);
  display: flex;
  height: 22px;
  stroke-width: var(--docsearch-icon-stroke-width);
  width: 22px;
}

.DocSearch-Hit-action svg {
  display: block;
  height: 18px;
  width: 18px;
}

.DocSearch-Hit-action + .DocSearch-Hit-action {
  margin-inline-start: 6px;
}

.DocSearch-Hit-action-button {
  appearance: none;
  background: none;
  border: 0;
  border-radius: 50%;
  color: inherit;
  cursor: pointer;
  padding: 2px;
}

svg.DocSearch-Hit-Select-Icon {
  display: none;
}

.DocSearch-Hit[aria-selected='true'] .DocSearch-Hit-Select-Icon {
  display: block;
}

@media screen and (prefers-reduced-motion: reduce) {
  .DocSearch-Hit-action-button:hover,
  .DocSearch-Hit-action-button:focus {
    background: rgba(0, 0, 0, 0.2);
    transition: none;
  }
}

.DocSearch-Hit-action-button:hover,
.DocSearch-Hit-action-button:focus {
  background: rgba(0, 0, 0, 0.2);
  transition: background-color 0.1s ease-in;
}

.DocSearch-Hit-action-button:hover path,
.DocSearch-Hit-action-button:focus path {
  fill: #fff;
}

.DocSearch-Hit-content-wrapper {
  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
  font-weight: 400;
  justify-content: center;
  line-height: 1.2em;
  margin: 0 8px;
  overflow-x: hidden;
  position: relative;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 80%;
  gap: 4px;
}

.DocSearch-Hit-title {
  font-size: 0.9em;
}

.DocSearch-Hit-path {
  color: var(--docsearch-secondary-text-color);
  font-size: 0.75em;
}
/* ... */

